--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         tools:targetApi="31">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyA0XvLbFokJDz-WkDQkKt2g3edUO13r6yw" />
+            android:value="Poner Key" />
         <activity
             android:name=".LoginActivity"
             android:exported="true"
