--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         tools:targetApi="31">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="PONER CLAVE GOOGLE MAPS" />
+            android:value="Poner clave google maps" />
         <activity
             android:name=".LoginActivity"
             android:exported="true"
